--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -15,4 +15,6 @@ RUN curl https://glide.sh/get | sh
 
 WORKDIR /go/src/gitlab.com/pantacor/pantahub-base
 
-CMD ["dockerize", "-wait", "tcp://mongo:27017", "-wait", "tcp://fluentd:24224", "-wait", "tcp://elasticsearch:9200", "-timeout", "60s", "go", "run", "main.go"]
+RUN GO111MODULE=on go get github.com/cosmtrek/air
+
+CMD ["dockerize", "-wait", "tcp://mongo:27017", "-wait", "tcp://fluentd:24224", "-wait", "tcp://elasticsearch:9200", "-timeout", "180s", "air", "-d"]
