--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,20 @@
-version: "3"
+version: "2"
 
 services:
   base:
     build:
       context: .
       dockerfile: Dockerfile.development
-    links:
-      - mongo
-      - fluentd
-      - elasticsearch
     volumes:
       - ${PWD}:/go/src/gitlab.com/pantacor/pantahub-base
+    env_file: ./.env.local
     ports:
       - 12365:12365
-    links:
-      - localstack
+    depends_on:
       - mongo
-    env_file: ./env.default
-
-  mongo:
-    image: mongo
-    volumes:
-      - ./pantahub-base-mongo-docker-run:/docker-entrypoint
-    command: /docker-entrypoint
+      - fluentd
+      - kafka
+      - elasticsearch
 
   fluentd:
     image: fluent/fluentd
@@ -43,11 +35,30 @@ services:
         hard: -1
     restart: always
 
-  localstack:
-    image: localstack/localstack:0.9.0
+  mongo:
+    image: mongo
+    volumes:
+      - ./mongo-entrypoint.sh:/docker-entrypoint
+    command: /docker-entrypoint
+
+  zookeeper:
+    container_name: zookeeper
+    image: confluentinc/cp-zookeeper:5.2.1
     environment:
-      - SERVICES=s3:5000
-      - DEFAULT_REGION=us-east-1
-      - HOSTNAME=localstack-s3
-    ports:
-      - "5000:5000"
+      - ZOOKEEPER_CLIENT_PORT=32181
+      - ZOOKEEPER_TICK_TIME=2000
+      - ZOOKEEPER_SYNC_LIMIT=2
+
+  kafka:
+    container_name: kafka
+    image: confluentinc/cp-kafka:5.0.1
+    volumes:
+      - ./kafka-entrypoint.sh:/docker-entrypoint
+    command: /docker-entrypoint
+    links:
+      - zookeeper
+    environment:
+      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:32181
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092
+      - KAFKA_BROKER_ID=2
+      - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
