Ignore vendor folder and archive it for 1 week in gitlab artifacts

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,6 +33,8 @@ build-devel:
   before_script:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
     - docker run --rm --privileged multiarch/qemu-user-static:register || true
+    - docker run --rm -v $PWD:/src -w /src golang sh -c "go mod download && go mod vendor"
+    - tar -cvzf "vendor.tar.gz" ./vendor/
   script:
     - docker pull $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG || true
     - docker build -f Dockerfile --build-arg NS=api2 --cache-from $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG --tag $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG-$CI_BUILD_REF --tag $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG .
@@ -42,6 +44,10 @@ build-devel:
     - test -n "$CI_BUILD_TAG" && docker push $CONTAINER_IMAGE:$CI_BUILD_TAG || true
   only:
   - develop
+  artifacts:
+    paths:
+    - vendor.tar.gz
+    expire_in: 1 week
 
 build-master:
   stage: build
