--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,6 @@
-language: go
-sudo: required
-dist: xenial
-go:
-  - "1.11"
-  - "1.12"
-  - "1.13"
-  - tip
-os:
-  - linux
-  - osx
-  - windows
-matrix:
-  allow_failures:
-    - go: tip
-  fast_finish: true
-script:
-  - go test -v -cover
-  - docker build .
+image: docker
+services:
+    - docker:dind
+build:
+  script:
+    - docker build --no-cache --rm .
