--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,3 +51,14 @@ services:
       - HOSTNAME=localstack
     ports:
       - "5000:5000"
+
+  nginx:
+    image: nginx:alpine
+    volumes:
+      - ./docker_confs/nginx-conf.d:/etc/nginx/conf.d:ro
+      - ./docker_confs/nginx-certs.d/:/etc/nginx/certs.d:ro
+    ports:
+      - "12375:80"
+      - "12376:443"
+    links:
+      - base
