--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -1,6 +1,4 @@
-FROM registry.gitlab.com/pantacor/pv-platforms/pantacmp:X86_64 as cmpossl
 FROM golang:alpine
-COPY --from=cmpossl --chown=0:0 /usr/local/ /usr/local
 
 ENV GO111MODULE=on
 
@@ -15,10 +13,7 @@ RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSI
     && tar -C /usr/local/bin -xzvf dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
     && rm dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz
 
-# install air
-RUN curl -fLo /usr/local/bin/air \
-    https://raw.githubusercontent.com/cosmtrek/air/master/bin/linux/air \
-    && chmod +x /usr/local/bin/air
+RUN go get github.com/cosmtrek/air
 
 WORKDIR /go/src/gitlab.com/pantacor/pantahub-base
 
