Add device registration using TPM flow with iDevID

--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -13,7 +13,10 @@ RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSI
     && tar -C /usr/local/bin -xzvf dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
     && rm dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz
 
-RUN go get github.com/cosmtrek/air
+# install air
+RUN curl -fLo /usr/local/bin/air \
+    https://raw.githubusercontent.com/cosmtrek/air/master/bin/linux/air \
+    && chmod +x /usr/local/bin/air
 
 WORKDIR /go/src/gitlab.com/pantacor/pantahub-base
 
