--- a/docker_confs/nginx-conf.d/nginx-dev.conf
+++ b/docker_confs/nginx-conf.d/nginx-dev.conf
@@ -11,10 +11,10 @@ server {
 	location / {
 		proxy_pass http://172.17.0.1:12368;
 		proxy_http_version 1.1;
-		proxy_set_header PhProxyTlsToken "abcde1234";
+		proxy_set_header Pantahub-TLS-Proxy-Token "abcde1234";
+		proxy_set_header Pantahub-TLS-Client-Cert $ssl_client_escaped_cert;
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header PhClientCertificate $ssl_client_escaped_cert;
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection $connection_upgrade;
 	}
