--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,9 +23,14 @@ services:
     volumes:
       - ./pantahub-base-mongo-docker-run:/docker-entrypoint
     command: /docker-entrypoint
+    ports:
+      - "27017:27017"
 
   fluentd:
     image: fluent/fluentd
+    ports:
+      - "5140:5140"
+      - "24224:24224"
 
   elasticsearch:
     container_name: elasticsearch
@@ -42,6 +47,9 @@ services:
         soft: -1
         hard: -1
     restart: always
+    ports:
+      - "9200:9200"
+      - "9300:9300"
 
   localstack:
     image: localstack/localstack:0.9.0
