--- a/air.conf
+++ b/air.conf
@@ -3,7 +3,7 @@ watch_dir = ""
 tmp_dir = ".tmp"
 
 [build]
-cmd = "go build -o .tmp/main -buildvcs=false main.go"
+cmd = "go build -buildvcs=false -o .tmp/main main.go"
 bin = ".tmp/main"
 log = "air_errors.log"
 include_ext = ["go", "html"]
