feature(dev tools): add full docker configuration to debug and test kafka pipelines

--- a/air.conf
+++ b/air.conf
@@ -7,7 +7,7 @@ cmd = "go build -buildvcs=false -o .tmp/main main.go"
 bin = ".tmp/main"
 log = "air_errors.log"
 include_ext = ["go", "html"]
-exclude_dir = ["assets", "tmp", ".tmp", "vendor", ".tmp", ".git"]
+exclude_dir = ["assets", "tmp", ".tmp", "vendor", ".tmp", ".git", "data", "kafka", "entrypoints"]
 # exclude_unchanged = true
 delay = 1000 # ms
 
