fix(ci): update gitlab variables

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,11 +18,11 @@ build-branch:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
     - docker run --rm --privileged multiarch/qemu-user-static:register || true
   script:
-    - docker pull $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG || true
-    - docker build -f Dockerfile --build-arg NS=branch --cache-from $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG --tag $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG-$CI_BUILD_REF --tag $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG .
-    - test -n "$CI_BUILD_TAG" && docker tag $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG-$CI_BUILD_REF $CONTAINER_IMAGE:$CI_BUILD_TAG || true
-    - docker push $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG-$CI_BUILD_REF
-    - docker push $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG
+    - docker pull $CONTAINER_IMAGE:$CI_COMMIT_REF_SLUG || true
+    - docker build -f Dockerfile --build-arg NS=branch --cache-from $CONTAINER_IMAGE:$CI_COMMIT_REF_SLUG --tag $CONTAINER_IMAGE:$CI_COMMIT_REF_SLUG-$CI_COMMIT_SHORT_SHA --tag $CONTAINER_IMAGE:$CI_COMMIT_REF_SLUG .
+    - test -n "$CI_BUILD_TAG" && docker tag $CONTAINER_IMAGE:$CI_COMMIT_REF_SLUG-$CI_COMMIT_SHORT_SHA $CONTAINER_IMAGE:$CI_BUILD_TAG || true
+    - docker push $CONTAINER_IMAGE:$CI_COMMIT_REF_SLUG-$CI_COMMIT_SHORT_SHA
+    - docker push $CONTAINER_IMAGE:$CI_COMMIT_REF_SLUG
     - test -n "$CI_BUILD_TAG" && docker push $CONTAINER_IMAGE:$CI_BUILD_TAG || true
   except:
   - develop
@@ -35,11 +35,11 @@ build-devel:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
     - docker run --rm --privileged multiarch/qemu-user-static:register || true
   script:
-    - docker pull $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG || true
-    - docker build -f Dockerfile --build-arg NS=api2 --cache-from $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG --tag $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG-$CI_BUILD_REF --tag $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG .
-    - test -n "$CI_BUILD_TAG" && docker tag $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG-$CI_BUILD_REF $CONTAINER_IMAGE:$CI_BUILD_TAG || true
-    - docker push $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG-$CI_BUILD_REF
-    - docker push $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG
+    - docker pull $CONTAINER_IMAGE:$CI_COMMIT_REF_SLUG || true
+    - docker build -f Dockerfile --build-arg NS=api2 --cache-from $CONTAINER_IMAGE:$CI_COMMIT_REF_SLUG --tag $CONTAINER_IMAGE:$CI_COMMIT_REF_SLUG-$CI_COMMIT_SHORT_SHA --tag $CONTAINER_IMAGE:$CI_COMMIT_REF_SLUG .
+    - test -n "$CI_BUILD_TAG" && docker tag $CONTAINER_IMAGE:$CI_COMMIT_REF_SLUG-$CI_COMMIT_SHORT_SHA $CONTAINER_IMAGE:$CI_BUILD_TAG || true
+    - docker push $CONTAINER_IMAGE:$CI_COMMIT_REF_SLUG-$CI_COMMIT_SHORT_SHA
+    - docker push $CONTAINER_IMAGE:$CI_COMMIT_REF_SLUG
     - test -n "$CI_BUILD_TAG" && docker push $CONTAINER_IMAGE:$CI_BUILD_TAG || true
   only:
     - develop
@@ -50,10 +50,10 @@ build-master:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
     - docker run --rm --privileged multiarch/qemu-user-static:register || true
   script:
-    - docker pull $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG || true
-    - docker build -f Dockerfile --build-arg NS=api --cache-from $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG --tag $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG-$CI_BUILD_REF --tag $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG .
-    - docker push $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG-$CI_BUILD_REF
-    - docker push $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG
+    - docker pull $CONTAINER_IMAGE:$CI_COMMIT_REF_SLUG || true
+    - docker build -f Dockerfile --build-arg NS=api --cache-from $CONTAINER_IMAGE:$CI_COMMIT_REF_SLUG --tag $CONTAINER_IMAGE:$CI_COMMIT_REF_SLUG-$CI_COMMIT_SHORT_SHA --tag $CONTAINER_IMAGE:$CI_COMMIT_REF_SLUG .
+    - docker push $CONTAINER_IMAGE:$CI_COMMIT_REF_SLUG-$CI_COMMIT_SHORT_SHA
+    - docker push $CONTAINER_IMAGE:$CI_COMMIT_REF_SLUG
     - test -n "$CI_BUILD_TAG" && docker push $CONTAINER_IMAGE:$CI_BUILD_TAG || true
   only:
   - master
@@ -64,11 +64,11 @@ build-tags:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
     - docker run --rm --privileged multiarch/qemu-user-static:register || true
   script:
-    - docker pull $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG || true
-    - docker build -f Dockerfile --build-arg NS=api --cache-from $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG --tag $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG-$CI_BUILD_REF --tag $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG .
-    - docker tag $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG-$CI_BUILD_REF $CONTAINER_IMAGE:$CI_BUILD_TAG
-    - docker push $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG-$CI_BUILD_REF
-    - docker push $CONTAINER_IMAGE:$CI_BUILD_REF_SLUG
+    - docker pull $CONTAINER_IMAGE:$CI_COMMIT_REF_SLUG || true
+    - docker build -f Dockerfile --build-arg NS=api --cache-from $CONTAINER_IMAGE:$CI_COMMIT_REF_SLUG --tag $CONTAINER_IMAGE:$CI_COMMIT_REF_SLUG-$CI_COMMIT_SHORT_SHA --tag $CONTAINER_IMAGE:$CI_COMMIT_REF_SLUG .
+    - docker tag $CONTAINER_IMAGE:$CI_COMMIT_REF_SLUG-$CI_COMMIT_SHORT_SHA $CONTAINER_IMAGE:$CI_BUILD_TAG
+    - docker push $CONTAINER_IMAGE:$CI_COMMIT_REF_SLUG-$CI_COMMIT_SHORT_SHA
+    - docker push $CONTAINER_IMAGE:$CI_COMMIT_REF_SLUG
     - docker push $CONTAINER_IMAGE:$CI_BUILD_TAG
   only:
     - tags
@@ -82,7 +82,7 @@ deploy-devel:
     - chmod +x ./kubectl && mv ./kubectl /usr/local/bin/kubectl
     - mkdir -p $HOME/.kube
     - echo -n $KUBE_CONFIG_DEV | base64 -d > $HOME/.kube/config
-    - kubectl -n api2 set image deploy/pantahub-base pantahub-base=$CONTAINER_IMAGE:$CI_BUILD_REF_SLUG-$CI_BUILD_REF
+    - kubectl -n api2 set image deploy/pantahub-base pantahub-base=$CONTAINER_IMAGE:$CI_COMMIT_REF_SLUG-$CI_COMMIT_SHORT_SHA
   only:
     - develop
 
@@ -95,7 +95,7 @@ deploy-prod:
     - chmod +x ./kubectl && mv ./kubectl /usr/local/bin/kubectl
     - mkdir -p $HOME/.kube
     - echo -n $KUBE_CONFIG_PROD | base64 -d > $HOME/.kube/config
-    - kubectl -n api set image deploy/pantahub-base pantahub-base=$CONTAINER_IMAGE:$CI_BUILD_REF_SLUG-$CI_BUILD_REF
+    - kubectl -n api set image deploy/pantahub-base pantahub-base=$CONTAINER_IMAGE:$CI_COMMIT_REF_SLUG-$CI_COMMIT_SHORT_SHA
   only:
     - tags
 
