feature(tokens): add token managment to create personal tokens

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -1,7 +1,8 @@
-version: "3"
 
 services:
   base:
+    networks:
+      - base
     build:
       context: .
       dockerfile: Dockerfile.development
@@ -20,20 +21,76 @@ services:
       - ./.env.local
 
   mongo:
-    image: mongo
+    networks:
+      - base
+    image: mongo:4.4.3
+    container_name: mongo
+    env_file:
+      - ./env.default
+      - ./.env.local
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: admin
+      MONGO_RS: rs0
+      MONGO_PORT: 27017
     volumes:
-      - ${PWD}/entrypoints/pantahub-base-mongo-docker-run:/docker-entrypoint
+      - ${PWD}/entrypoints/mongo-cluster-entrypoint:/docker-entrypoint
+      - ${PWD}/.data/mongo-1:/data/db
+      - ${PWD}/entrypoints/mongokey.yaml:/keys/mongokey.yaml:ro
     command: /docker-entrypoint
     ports:
-      - "27017:27017"
+      - 27017:27017
+    links:
+      - mongo2
+      - mongo3
+
+  mongo2:
+    networks:
+      - base
+    image: mongo:4.4.3
+    container_name: mongo2
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: admin
+      MONGO_RS: rs0
+      MONGO_PORT: 30002
+    command: ["/docker-entrypoint"]
+    volumes:
+      - ${PWD}/entrypoints/mongo-cluster-secondary-entrypoint:/docker-entrypoint
+      - ${PWD}/.data/mongo-2:/data/db
+      - ${PWD}/entrypoints/mongokey.yaml:/keys/mongokey.yaml:ro
+    ports:
+      - 30002:30002
+
+  mongo3:
+    networks:
+      - base
+    image: mongo:4.4.3
+    container_name: mongo3
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: admin
+      MONGO_RS: rs0
+      MONGO_PORT: 30003
+    command: ["/docker-entrypoint"]
+    volumes:
+      - ${PWD}/entrypoints/mongo-cluster-secondary-entrypoint:/docker-entrypoint
+      - ${PWD}/.data/mongo-3:/data/db
+      - ${PWD}/entrypoints/mongokey.yaml:/keys/mongokey.yaml:ro
+    ports:
+      - 30003:30003
 
   fluentd:
-    image: fluent/fluentd
+    networks:
+      - base
+    image: fluent/fluentd:v1.16-debian
     ports:
       - "5140:5140"
       - "24224:24224"
 
   elasticsearch:
+    networks:
+      - base
     container_name: elasticsearch
     image: docker.elastic.co/elasticsearch/elasticsearch:7.17.3
     environment:
@@ -54,6 +111,8 @@ services:
       - "9300:9300"
 
   localstack:
+    networks:
+      - base
     image: localstack/localstack:0.9.0
     environment:
       - SERVICES=s3:4566
@@ -63,6 +122,8 @@ services:
       - "4566:4566"
 
   kibana:
+    networks:
+      - base
     image: docker.elastic.co/kibana/kibana:7.17.3
     environment:
       - SERVERNAME=kibana
@@ -82,16 +143,10 @@ services:
       - elasticsearch
     ports:
       - "5601:5601"
-  localstack:
-    image: localstack/localstack:0.9.0
-    environment:
-      - SERVICES=s3:4566
-      - DEFAULT_REGION=us-east-1
-      - HOSTNAME=localstack
-    ports:
-      - "4566:4566"
 
   nginx:
+    networks:
+      - base
     image: nginx:alpine
     volumes:
       - ./docker_confs/nginx-conf.d:/etc/nginx/conf.d:ro
@@ -101,3 +156,7 @@ services:
       - "12376:443"
     links:
       - base
+
+networks:
+  base:
+    driver: bridge
