--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,5 +1,3 @@
-version: "3"
-
 services:
   base:
     build:
@@ -22,7 +20,7 @@ services:
     command: /docker-entrypoint
 
   fluentd:
-    image: fluent/fluentd
+    image: fluent/fluentd:v1.16-debian
 
   elasticsearch:
     container_name: elasticsearch
