never deploy on develop

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -84,7 +84,7 @@ deploy-devel:
     - echo -n $KUBE_CONFIG_DEV | base64 -d > $HOME/.kube/config
     - kubectl -n api2 set image deploy/pantahub-base pantahub-base=$CONTAINER_IMAGE:$CI_COMMIT_REF_SLUG-$CI_COMMIT_SHORT_SHA
   only:
-    - develop
+    - never_deploy_devel
 
 deploy-prod:
   stage: deploy
