--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -1,4 +1,3 @@
-
 services:
   base:
     networks:
@@ -17,7 +16,7 @@ services:
     ports:
       - 12365:12365
     env_file:
-      - ./env.default 
+      - ./env.default
       - ./.env.local
 
   mongo:
@@ -101,6 +100,10 @@ services:
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
       - xpack.security.enabled=false
       - xpack.watcher.enabled=false
+      - xpack.security.transport.ssl.enabled=false
+      - xpack.security.http.ssl.enabled=false
+    volumes:
+      - esdata:/usr/share/elasticsearch/data
     ulimits:
       memlock:
         soft: -1
@@ -125,15 +128,19 @@ services:
     networks:
       - base
     image: docker.elastic.co/kibana/kibana:7.17.3
+    container_name: kibana
+    volumes:
+      - ./entrypoints/kibana.yml:/usr/share/kibana/config/kibana.yml
     environment:
       - SERVERNAME=kibana
-      - ELASTICSEARCH_HOSTS=https://elasticsearch:9200
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
       - cluster.name=docker-cluster
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
       - xpack.security.enabled=false
       - xpack.watcher.enabled=false
-      - "discovery.type=single-node"
+      - discovery.type=single-node
+      - XPACK_SECURITY_ENABLED=false
     ulimits:
       memlock:
         soft: -1
@@ -160,3 +167,7 @@ services:
 networks:
   base:
     driver: bridge
+
+volumes:
+  esdata:
+
